--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,47 +1,82 @@
-.container {
-    margin-top: 5em;
+/* Col-md-setting */
+.col-md-2 {
+    padding: 0px;
 }
 
-#filter-1 {
-    background-color: grey;
-    border-radius: 25px;
-    padding: 10px;
-    margin-bottom: 20px;
-    min-height: 250px;
+html {
+    background-color: slategray;
 }
 
-#filter-2 {
-    background-color: grey;
-    border-radius: 25px;
+body {
+    height: 100%;
+    background-color: slategray;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.container_set {
+    margin: 1em;
+}
+
+.navbar-brand {
+    font-size: 2em;
+    font-family: 'Raleway', sans-serif;
+}
+
+.nav-item {
+    margin-right: 1em;
+}
+
+.sidemenu {
+    background-color: white;
+    padding: 1em;
+    padding-left: 2em;
+    height: 100%;
+    /* border-radius: 25px; */
+}
+
+.sideinfo {
+    background-color: white;
+    height: 100%;
+    /* border-radius: 25px; */
     padding: 10px;
-    min-height: 250px;
+}
+
+.filter {
+    /* border-radius: 25px; */
+    padding: 10px;
+    margin-bottom: 2em;
 }
 
 #map-id {
     background-color: lightgray;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     min-height: 250px;
+    min-width: 100%;
     text-align: center;
     padding: 50px;
 }
 
 #bar-id {
     background-color: lightgray;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     min-height: 250px;
+    min-width: 100%;
     text-align: center;
+    /* margin-top: 20px; */
     padding: 50px;
 }
 
 #line-id {
-    background-color: lightgray;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     min-height: 250px;
     min-width: 100%;
     text-align: center;
-    margin-top: 20px;
-    padding: 50px;
-    
+    /* margin-top: 20px; */
+    overflow: auto;
+}
+
+.hasDatepicker {
+    max-width: 100%;
 }
 
 
