--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,14 +3,33 @@
     padding: 0px;
 }
 
+.col-md-4 {
+    background: linear-gradient(to bottom, #8942a8, #ba382f);
+    padding: 0px;
+}
+
 html {
     background-color: slategray;
 }
 
 body {
     height: 100%;
-    background-color: slategray;
     font-family: 'Quicksand', sans-serif;
+}
+
+.google-slides-container{
+    position: relative;
+    width: 100%;
+    padding-top: 60%;
+    overflow: hidden;
+}
+
+.google-slides-container iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .container_set {
@@ -36,10 +55,24 @@ body {
 
 .sideinfo {
     background-color: white;
-    height: 100%;
-    /* border-radius: 25px; */
-    padding: 10px;
+    min-height: 500px;
+    border-radius: 25px;
+    margin: 20px;
+    margin-right: 30px;
+    padding: 20px;
 }
+
+#list {
+    list-style-type: none;
+}
+
+#list li:first-child {
+    padding-top: 20px;
+}
+
+#list li:nth-child(n) {  
+    padding-bottom: 20px;
+  }
 
 .filter {
     /* border-radius: 25px; */
@@ -55,12 +88,17 @@ body {
 }
 
 #map-id {
-    background-color: lightgray;
+    background: #73B6E6;
     /* border-radius: 25px; */
     min-height: 400px;
     min-width: 100%;
     text-align: center;
     padding: 50px;
+    z-index: 0;
+}
+
+#ui-datepicker-div {
+    z-index: 1;
 }
 
 #bar-id {
